# fast_image_encoder

./: .gitignore  README.md  changelog.md
.github/workflows/: build.yaml
Docker/: Dockerfile  dockerfile
cs/FastImageEncoder/: FastImageEncoder.sln
cs/FastImageEncoder/Benchmark/: Benchmark.csproj  Program.cs
cs/FastImageEncoder/Benchmark/images/: img_0000.bytes  img_0004.bytes
cs/FastImageEncoder/FastImageEncoder/: ColorType.cs  FastImageEncoder.csproj  ImageBuffers.cs  NativeBindings.cs
cs/FastImageEncoder/UnityExample/: Assembly-CSharp.csproj  UnityExample.sln
cs/FastImageEncoder/UnityExample/Assets/Resources/: ImageEncoder.prefab
cs/FastImageEncoder/UnityExample/Assets/Scenes/: Benchmark.unity  MinimalExample.unity  SampleScene.unity
cs/FastImageEncoder/UnityExample/Assets/Scripts/: Benchmarker.cs  ImageEncoder.cs  ImageEncoderManager.cs  MinimalExample.cs
cs/FastImageEncoder/UnityExample/ProjectSettings/: ProjectSettings.asset
py/: macho.py  upload.py
rs/fast_image_encoder/: Cargo.toml
rs/fast_image_encoder/examples/: benchmark.rs
rs/fast_image_encoder/images/: img_0001.bytes  img_0002.bytes  img_0003.bytes  img_0005.bytes
rs/fast_image_encoder/src/: lib.rs  raw_image.rs
